style: :lipstick: Add paper background to report section in adolescents tab
Add paper background to report section in adolescents tab

--- a/src/pages/hpp-profile.astro
+++ b/src/pages/hpp-profile.astro
@@ -638,60 +638,62 @@ const internalNavLinks = [
                 </section>
               </article>
 
-              <article class="wrapper hpp-multisystemic__report">
-                <h2
-                  class="hpp-multisystemic__report--title hpp__profile__subhead"
-                >
-                  Selected reported body system signs/symptoms or interventions in children with HPP<sup>9</sup>:
-                </h2>
+              <div class="hpp-multisystemic__report--bg">
+                <article class="wrapper hpp-multisystemic__report">
+                  <h2
+                    class="hpp-multisystemic__report--title hpp__profile__subhead"
+                  >
+                    Selected reported body system signs/symptoms or interventions in children with HPP<sup>9</sup>:
+                  </h2>
 
-                <picture>
-                  <source
-                    media="(min-width: 700px)"
-                    srcset="/assets/images/hpp-profile/adolescents-signs-and-symptoms-chart--desktop.png"
-                  />
-                  <img
-                    class="hpp-multisystemic__report--chart"
-                    src="/assets/images/hpp-profile/adolescents-signs-and-symptoms-chart.png"
-                    alt="FPO IMAGE"
-                  />
-                  <figcaption>Percent of patients</figcaption>
-                </picture>
+                  <picture>
+                    <source
+                      media="(min-width: 700px)"
+                      srcset="/assets/images/hpp-profile/adolescents-signs-and-symptoms-chart--desktop.png"
+                    />
+                    <img
+                      class="hpp-multisystemic__report--chart"
+                      src="/assets/images/hpp-profile/adolescents-signs-and-symptoms-chart.png"
+                      alt="FPO IMAGE"
+                    />
+                    <figcaption>Percent of patients</figcaption>
+                  </picture>
 
-                <p class="hpp-multisystemic__report--conditions hpp-multisystemic__report--conditions--children-after-chart">
-                  Multinational, observational, prospective Global Hypophosphatasia Registry study conducted in children (n=121; &lt;18 years) from January 2015 to September 2017.<sup>9</sup>
-                </p>
-
-                <p
-                  class="hpp-multisystemic__report--conditions hpp-multisystemic__report--conditions--children-after-chart hpp-multisystemic__report--conditions-smaller hpp-multisystemic__report--conditions--mt1"
-                >
-                  <sup>a</sup>Excludes patients aged &lt;2 years at enrollment.
-                </p>
-
-                <p class="hpp-multisystemic__report--conditions hpp-multisystemic__report--conditions--children-after-chart hpp-multisystemic__report--conditions-smaller">
-                  <sup>b</sup>Excludes patients aged &lt;6 months at enrollment.
-                </p>
-
-                <div
-                  class="hpp-multisystemic__study hpp-multisystemic__study--bigger hpp-multisystemic__study--bigger-children"
-                >
-                  <h2 class="hpp-multisystemic__study--percentage">~27%</h2>
-                  <p class="hpp-multisystemic__study--text">
-                    of children and adolescents with hypophosphatasia exhibit and have a history of <strong>neurologic symptoms<sup>9*</sup></strong>
+                  <p class="hpp-multisystemic__report--conditions hpp-multisystemic__report--conditions--children-after-chart">
+                    Multinational, observational, prospective Global Hypophosphatasia Registry study conducted in children (n=121; &lt;18 years) from January 2015 to September 2017.<sup>9</sup>
                   </p>
-                  <p class="hpp-multisystemic__study--condition">
-                    <sup>*</sup>Neurologic symptoms refer to craniosynostosis, developmental delay, increased intracranial pressure, and seizures.
+
+                  <p
+                    class="hpp-multisystemic__report--conditions hpp-multisystemic__report--conditions--children-after-chart hpp-multisystemic__report--conditions-smaller hpp-multisystemic__report--conditions--mt1"
+                  >
+                    <sup>a</sup>Excludes patients aged &lt;2 years at enrollment.
                   </p>
-                </div>
 
-                <h2 class="hpp__profile__title hpp__profile__title--blue">
-                  Hypophosphatasia CAN CAUSE INCREASING HARM
-                </h2>
+                  <p class="hpp-multisystemic__report--conditions hpp-multisystemic__report--conditions--children-after-chart hpp-multisystemic__report--conditions-smaller">
+                    <sup>b</sup>Excludes patients aged &lt;6 months at enrollment.
+                  </p>
 
-                <p class="hpp-multisystemic__report--content--harm">
-                  It’s vital to consider that current symptom presentation may not accurately represent the degree of disease progression. Patients with hypophosphatasia can experience a wide range of unexplained and debilitating symptoms that result in a frustrating journey to find relief. These clinical manifestations can change and accumulate, reflecting disease evolution and progression over time.<sup>1,6,9,14-17</sup>
-                </p>
-              </article>
+                  <div
+                    class="hpp-multisystemic__study hpp-multisystemic__study--bigger hpp-multisystemic__study--bigger-children"
+                  >
+                    <h2 class="hpp-multisystemic__study--percentage">~27%</h2>
+                    <p class="hpp-multisystemic__study--text">
+                      of children and adolescents with hypophosphatasia exhibit and have a history of <strong>neurologic symptoms<sup>9*</sup></strong>
+                    </p>
+                    <p class="hpp-multisystemic__study--condition">
+                      <sup>*</sup>Neurologic symptoms refer to craniosynostosis, developmental delay, increased intracranial pressure, and seizures.
+                    </p>
+                  </div>
+
+                  <h2 class="hpp__profile__title hpp__profile__title--blue">
+                    Hypophosphatasia CAN CAUSE INCREASING HARM
+                  </h2>
+
+                  <p class="hpp-multisystemic__report--content--harm">
+                    It’s vital to consider that current symptom presentation may not accurately represent the degree of disease progression. Patients with hypophosphatasia can experience a wide range of unexplained and debilitating symptoms that result in a frustrating journey to find relief. These clinical manifestations can change and accumulate, reflecting disease evolution and progression over time.<sup>1,6,9,14-17</sup>
+                  </p>
+                </article>
+              </div>
             </div>
           </div>
           <!-- Prevalence of HPP -->
