--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5177,8 +5177,8 @@
                     background-repeat: no-repeat;
                     background-size: 100% 100%;
                     background-position: top left;
-
-                    padding: 2rem 3rem;
+                    padding: 3rem 4rem;
+                    margin-top: 2rem;
                 }
 
                 @media screen and (min-width: 1440px) {
