--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2933,6 +2933,7 @@
         @media screen and (min-width: 1024px) {
             font-size: 3.5rem;
             line-height: 56px;
+            max-width: 100%;
         }
     }
 
