fix: :lipstick: Fix typo issue
Remove duplicated word

--- a/src/pages/hpp-profile.astro
+++ b/src/pages/hpp-profile.astro
@@ -71,7 +71,7 @@ const internalNavLinks = [
           <p
             class="hpp__profile__paragraph hpp__profile__paragraph--sub hpp__profile__red-frame-disclaimer--content text--center color--black md:color--white"
           >
-            Hypophosphatasia may become debilitating and can can cause damage to <span class="hpp__profile__red-frame-disclaimer--text-red color--cinnabar md:color--white">multiple systems</span> in the body beyond the skeletal system.<sup>3-5</sup>
+            Hypophosphatasia may become debilitating and can cause damage to <span class="hpp__profile__red-frame-disclaimer--text-red color--cinnabar md:color--white">multiple systems</span> in the body beyond the skeletal system.<sup>3-5</sup>
           </p>
         </div>
       </div>
