--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4553,11 +4553,16 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
+                margin-right: 0;
 
                 a {
                     font-family: 'Special Elite', cursive;
                     background: transparent;
                     border: none;
+                    font-size: 1.5rem;
+                    line-height: 2.1rem;
+                    padding-left: 0;
+                    padding-right: 0;
 
                     &:hover {
                         color: $color-cinnabar;
