--- a/src/styles/components/_stay-connected.scss
+++ b/src/styles/components/_stay-connected.scss
@@ -154,6 +154,15 @@
         left: 38px;
         }
     }
+    #custom-error2{
+        top: 91%;
+        left: -29px;
+        @media screen and (min-width:740px) {
+        left: 38px;
+        font-size: 14.5px;
+        }
+    }
+    
 
     .red-check{
         margin-top: 25px;
@@ -293,6 +302,23 @@
 
     .modal__close{
         cursor: pointer;
+    }
+}
+
+.ty-message{
+    max-width: 832px;
+    padding-top: 64px;
+    padding-bottom: 64px;
+    padding-left: 25px;
+    padding-right: 25px;
+    h2{
+        margin: auto;
+        margin-bottom: 2rem;
+        text-align: center;
+    }
+
+    p{
+        font-weight: bold;
     }
 }
 
