--- a/src/styles/components/_stay-connected.scss
+++ b/src/styles/components/_stay-connected.scss
@@ -96,9 +96,10 @@
         &::placeholder{
             font-family: 'Barlow';
             font-style: normal;
-            font-weight: bold;
+            font-weight: 600;
             font-size: 13px;
             line-height: 21px;
+            color: $color-black;
             
             @media screen and (min-width:740px) {
             font-size: 16px;
