checkbox is activated if you click on the label

--- a/src/components/stay-conected.astro
+++ b/src/components/stay-conected.astro
@@ -283,7 +283,7 @@
                 onblur="validateFormControl(event)"
                 onchange="validateFormControl(event)"
               />
-              <label class="form__control-label" for="terms-and-conditions">
+              <label class="form__control-label" for="terms-and-conditions2">
                 <!-- By checking this box and submitting this form, I give <a
                   href="https://alexion.com/Legal#privacynotice%5D"
                   target="_blank">Alexion</a
