feat: :construction: Add an image tag to create the background of report section
Add an image tag to create the background of report section

--- a/src/pages/hpp-profile.astro
+++ b/src/pages/hpp-profile.astro
@@ -250,6 +250,7 @@ const internalNavLinks = [
                 </article>
 
                 <div class="hpp-multisystemic__report--bg">
+                  <img class="hpp-multisystemic__report--bg-image" src="/assets/images/hpp-profile/paper-bg-tabs.png" alt="" srcset="">
                   <article class="hpp-multisystemic__report">
                     <h3
                       class="hpp-multisystemic__report--title hpp__profile__subhead"
@@ -531,11 +532,9 @@ const internalNavLinks = [
                   <p class="hpp-multisystemic__definition--text">
                     Clinically meaningful impairment in children’s pain, sleep, and mood was reported in one study using parent ratings.<sup>6*</sup>
                   </p>
-
                   <span class="hpp-multisystemic__definition--condition">
                     <sup class="symbol-sup">*</sup>Adults may have a history of childhood symptoms.<sup>3,7,10</sup>
                   </span>
-
                   <h3
                     class="hpp-multisystemic__definition--title hpp-multisystemic__definition--title-no-line hpp-multisystemic__definition--title-desktop"
                   >
@@ -639,6 +638,7 @@ const internalNavLinks = [
               </article>
 
               <div class="hpp-multisystemic__report--bg">
+                <img class="hpp-multisystemic__report--bg-image" src="/assets/images/hpp-profile/paper-bg-tabs.png" alt="">
                 <article class="wrapper hpp-multisystemic__report">
                   <h2
                     class="hpp-multisystemic__report--title hpp__profile__subhead"
