--- a/src/components/stay-conected.astro
+++ b/src/components/stay-conected.astro
@@ -382,16 +382,21 @@
           }else{
             errorLabel[i].style.display = 'none';
           }
-          if(check.checked != true ){
-            errorLabel[6].style.display = 'block';
-          }else{
-            errorLabel[6].style.display = 'none';
-          }
-          if(inputs[5] === '' ){
-            errorLabel[5].style.display = 'block';
-          }else{
-            errorLabel[5].style.display = 'none';
-          }
+        }
+        if(check.checked != true ){
+          errorLabel[6].style.display = 'block';
+        }else{
+          errorLabel[6].style.display = 'none';
+        }
+        if(inputs[6].value === '' ){
+          errorLabel[5].style.display = 'block';
+        }else{
+          errorLabel[5].style.display = 'none';
+        }
+        if(inputs[5].value === '' ){
+          errorLabel[4].style.display = 'block';
+        }else{
+          errorLabel[4].style.display = 'none';
         }
 
             if(inputs[0].value!='' &&inputs[1].value!='' && inputs[2].value!='' && inputs[3].value!='' && inputs[5].value!='' && check.checked===true){
