fix: :lipstick: Fix width of first text on tabs issue
Change max-width on 400px to none and then change in 769px to 49ch

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3968,14 +3968,14 @@
                     color: $color-red;
                 }
 
-                @media screen and (min-width: 475px) {
-                    max-width: 49ch;
+                @media screen and (min-width: 400px) {
+                    max-width: none;
                     width: 95%;
                 }
 
-                /* @media screen and (min-width: 769px) {
-                    width: 65%;
-                } */
+                @media screen and (min-width: 769px) {
+                    max-width: 49ch;
+                }
 
                 /* @media screen and (min-width: 1024px) {
                     max-width: 31.25rem;
