--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3568,10 +3568,13 @@
             justify-content: center;
             align-items: center;
             margin-bottom: 1rem;
-            background-image: url(/assets/images/red-frame-2.png);
-            background-size: 100% 100%;
-            background-repeat: no-repeat;
-            background-position: center;
+
+            @media screen and (min-width: 769px) {
+                background-image: url(/assets/images/red-frame-2.png);
+                background-size: 100% 100%;
+                background-repeat: no-repeat;
+                background-position: center;
+            }
 
             &--content {
                 max-width: 73ch;
