--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5261,6 +5261,8 @@
                         left: -35px;
                         top: 0;
                         transform: rotate(2deg);
+
+                        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                     }
                 }
 
