--- a/src/styles/settings/_layouts.scss
+++ b/src/styles/settings/_layouts.scss
@@ -56,8 +56,25 @@
             }
 
             &only-left {
+                max-width: calc(100% - (var(--wrapper-margin) / 2));
                 margin-left: auto;
                 margin-right: 0;
+            }
+        }
+    }
+
+    &.md\: {
+        @media screen and (min-width: 768px) {
+            &only-left {
+                max-width: calc(100% - (var(--wrapper-margin) / 2));
+                margin-left: auto;
+                margin-right: 0;
+            }
+
+            &only-right {
+                max-width: calc(100% - (var(--wrapper-margin) / 2));
+                margin-right: auto;
+                margin-left: 0;
             }
         }
     }
@@ -85,13 +102,19 @@
 
 .xl\:no-wrapper {
     @media screen and (min-width: 1440px) {
-        max-width: max-content
+        max-width: max-content !important;
+    }
+}
+
+.lg\:no-wrapper {
+    @media screen and (min-width: 1024px) {
+        max-width: max-content !important;
     }
 }
 
 .md\:no-wrapper {
     @media screen and (min-width: 768px) {
-        max-width: max-content;
+        max-width: max-content !important;;
         margin: 0 auto;
     }
 }
